// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpportunityCard > Snapshot > matches snapshot in draggable mode 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border border-white/5 p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 transition-all cursor-grab active:cursor-grabbing"
  draggable="true"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <h3
          class="font-semibold text-white truncate"
        >
          ERP系统升级项目
        </h3>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="w-3 h-3 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span
          class="text-xs text-slate-400"
        >
          某某科技
        </span>
      </div>
    </div>
    <div
      class="text-xs text-red-400 bg-red-500/20"
      data-testid="badge"
    >
      高
    </div>
  </div>
  <div
    class="mb-3"
  >
    <div
      class="flex items-center justify-between mb-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-amber-500"
        />
        <span
          class="text-xs text-slate-300"
        >
          报价
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        成功率 
        70
        %
      </span>
    </div>
    <div
      class="h-1.5"
      data-testid="progress"
      value="50"
    />
  </div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        class="w-4 h-4 text-amber-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-lg font-semibold text-white"
      >
        ¥
        50
        万
      </span>
    </div>
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        预计: 
        2024-03-01
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <div
      class="text-xs"
      data-testid="badge"
    >
      重点项目
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      Q1目标
    </div>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span>
          张三
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span>
          5
          天
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OpportunityCard > Snapshot > matches snapshot in normal mode 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border border-white/5 p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 cursor-pointer transition-all"
  draggable="false"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <h3
          class="font-semibold text-white truncate"
        >
          ERP系统升级项目
        </h3>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="w-3 h-3 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span
          class="text-xs text-slate-400"
        >
          某某科技
        </span>
      </div>
    </div>
    <div
      class="text-xs text-red-400 bg-red-500/20"
      data-testid="badge"
    >
      高
    </div>
  </div>
  <div
    class="mb-3"
  >
    <div
      class="flex items-center justify-between mb-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-amber-500"
        />
        <span
          class="text-xs text-slate-300"
        >
          报价
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        成功率 
        70
        %
      </span>
    </div>
    <div
      class="h-1.5"
      data-testid="progress"
      value="50"
    />
  </div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        class="w-4 h-4 text-amber-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-lg font-semibold text-white"
      >
        ¥
        50
        万
      </span>
    </div>
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        预计: 
        2024-03-01
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <div
      class="text-xs"
      data-testid="badge"
    >
      重点项目
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      Q1目标
    </div>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span>
          张三
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span>
          5
          天
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OpportunityCard > Snapshot > matches snapshot with hot and overdue 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 cursor-pointer transition-all border-amber-500/30"
  draggable="false"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <svg
          class="w-4 h-4 text-amber-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <h3
          class="font-semibold text-white truncate"
        >
          ERP系统升级项目
        </h3>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="w-3 h-3 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span
          class="text-xs text-slate-400"
        >
          某某科技
        </span>
      </div>
    </div>
    <div
      class="text-xs text-red-400 bg-red-500/20"
      data-testid="badge"
    >
      高
    </div>
  </div>
  <div
    class="mb-3"
  >
    <div
      class="flex items-center justify-between mb-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-amber-500"
        />
        <span
          class="text-xs text-slate-300"
        >
          报价
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        成功率 
        70
        %
      </span>
    </div>
    <div
      class="h-1.5"
      data-testid="progress"
      value="50"
    />
  </div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        class="w-4 h-4 text-amber-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-lg font-semibold text-white"
      >
        ¥
        50
        万
      </span>
    </div>
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        预计: 
        2024-03-01
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <div
      class="text-xs"
      data-testid="badge"
    >
      重点项目
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      Q1目标
    </div>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span>
          张三
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        <span>
          5
          天
        </span>
      </div>
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      <svg
        class="w-3 h-3 mr-1"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      逾期
    </div>
  </div>
</div>
`;
